[package]
name = "tron-api-client"
version = "0.1.1-alpha.0"
authors = ["Kevin Holder <kevholderx@gmail.com>"]
description = "Tron API client and CLI"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oikos-cash/tron-api-client.git"
keywords = ["cryptocurrency", "tron", "ethereum", "bitcoin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
url = "2.5.4"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.11.5"

[[bin]]
name = "tron"
path = "src/main.rs"
